RTS-7850 Minor bug fixes for staff view
The /persons listing did not look correct due to different classes
applied to the html element and the exposed filters was added as a
block outside the view. I also discovered and fixed a css bug
affecting the layout of the user competence field in the profile page.

--- a/themes/uib_zen/sass/modules/_users.scss
+++ b/themes/uib_zen/sass/modules/_users.scss
@@ -259,6 +259,7 @@ $zen-column-count: 5;
     display: inline-block;
     background: #FAEEED;
     padding: 5px 10px;
+    margin: 0 10px 10px 0;
     @include border-radius(5px, 5px);
     &:nth-child(n+2) {
       padding-right: 0.5em;
@@ -336,7 +337,8 @@ $zen-column-count: 5;
 // Styling for view mode user teaser
 /////////////
 $zen-column-count: 10;
-.page-node {
+.page-node,
+.page-persons {
   .field-name-field-uib-related-persons,
   .view-ansatte {
     .profile {
@@ -362,9 +364,6 @@ $zen-column-count: 10;
     .field-name-field-uib-user-competence {
       @include zen-clear();
       @include zen-grid-item(10,1);
-      a {
-        margin: 0 10px 10px 0;
-      }
     }
   }
   @media all and (min-width: 600px) {
